<resources>
    <string name="app_name">Tour_Guide_Nepal</string>
    <string name="title_activity_chitwan_map">Map</string>
    <string name="title_activity_lumbini_map">Map</string>
    <string name="title_activity_dolakha_map">Map</string>
    <string name="title_activity_mustang_map">Map</string>
    <string name="shared_preferances_name">shared_preference</string>
    <string name="title_activity_pokhara_map">Map</string>
    <string name="title_activity_solukhumbu_map">Map</string>
    <string name="title_activity_gorkha_map">Map</string>
    <string name="title_activity_kathmandu_map">Map</string>
    <string name="title_activity_tanahun_map">Map</string>
    <string name="title_activity_janakpur1_map">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>  <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_data_available">no_data_available</string>
    <string name="about_us">
         Tour Guide Nepal is an easy to use, faster, better and comfortable guide for travellers. This application helps in travel around different places of Nepal. The application offers features from selecting city, booking hotels to knowing the interested city temperature or getting a ride in the city.
           </string>
    <string name="about_us1">
        Tour Guide Nepal focus on providing excellent customer experience, hassle free navigations of the applications. Our team in the project is ready for making customer experience smooth and better.
    </string>

    <string name="aboutend">
        Copyrights: Tour Guide Nepal
    </string>
    <string name="roshan_info">Team scrum master is Roshan Gautam. He is motivated and excited to be the scrum master. He organizes and helps team members in each sprint activities. He is the voice of the team and he tries to make team collaboration. Till now, there is no problem with the scrum master.</string>

 
    //front terms and services

    <string name="front1">Welcome to Tour Guide Nepal. This application is a trustworthy guide for tourists and our customers and need to be bound by Terms and Conditions as this application is used. Because the Terms and Conditions contain legal obligations, please read them carefully.</string>
    <string name="front2">By using this site, you agree to be bound by, and to comply with these Terms and Conditions.If you do not agree to these Terms and Conditions, please do not use this site.
    </string>
    <string name="front3">Read full Terms &amp; Conditions</string>
    <string name="front4">I agree with the Terms and Conditions</string>
    <string name="front5">I agree with Tour Guide Nepal Privacy Policy</string>

    //back terms and services
    <string name="backtips">Shortcut:Click on the title</string>
    <string name="backtotal">Introduction, Booking Conditions, Payment Modes, Bank Transfer, Pay by Online, Risk and Liabilities, Cancellations, Change in Pricing, Insurances</string>
    <string name="back1">Terms &amp; Conditions</string>
    <string name="back2">We recommend you to go through the Terms and conditions of Nepal Tour guide Team before you book any of our trip packages as you are bounded by our rules and regulations once you make the deal. Also if you have any queries regarding our terms condition please feel free to contact us.</string>
    <string name="back21">A team of a dedicated and qualified professionals Nepal Tour Guide Team has been a dependable and trustworthy tour and trekking operators registered under the underlying regulations of the Govt. of Nepal and Tourism Board of Nepal. The motto of this organizations is Customer’s Satisfaction and much effort has been made to render services that standout from the rest.</string>
    <string name="back3">One must have a valid passport to be eligible to book any of our trip. 20% amount is to be paid in advance for the confirmation of the booking and scanned copies of the passport is to be provided along with the payment. For any Bhutan tours 50% of the total trip amount is applicable for booking confirmation and for Tibet and India tours 30% of the total trip amount shall be applicable for booking confirmation. You may use Bank transfer or credit card for such payment. All of this amount is fully non- refundable in case of the cancellation of the trip by any client. For any cancellation to be made by the company due to unavoidable circumstances, a postpone of the trip shall be provided while the amount is non- refundable. Details have been provided in the cancellation section.</string>
    <string name="back31">Booking in last minutes are also acceptable for any of our Nepal tours 3 days prior to the date of departure. For Bhutan, Tibet and India tours such privilege is not provided.</string>
    <string name="back4">Payment Modes</string>
    <string name="back5">Bank Transfer</string>
    <string name="back6">IME/Moneygram/Western Union</string>
    <string name="back7">Pay by Online</string>
    <string name="back8">All of the Nepal, Tibet , India and Bhutan tours are conducted under the strict rules and regulations of the tourism board of the respective country. We are not liable for any changes or cancellations of the trip under unavoidable circumstances like change in the rules and regulations of country, any government restrictions, natural disasters, political instability, cancellations of flights, delays, sickness or accidents, breakdown of vehicles, etc. Any extra cost incurred due to such circumstances shall have to be borne by the clients themselves. Therefore, we recommend you have a travel Insurance.</string>
    <string name="back9">For any trip cancellations clients will have to inform 30 days prior to the departure. While 20% Booking amount is fully nonrefundable any extra amount received above that shall be refunded however the expenses incurred for the transfer of the refund amount shall be charged by the company. Any trips cancelled within 15 days of the date of departure shall be fully nonrefundable.</string>
    <string name="back10">Company holds the right to change the price any time if the company feels necessary. Such actions however will be reasonable like inflation, too much changes in exchanges rates, New Govt. policies etc. but company shall not be liable to answer anyone in such case.</string>
    <string name="back11">Our company does not provide insurance for any of our tours or treks. It is highly recommended for our clients to have travel insurance high altitude medical expenses, personal accidents, emergency evacuations, trip cancellations, loss of gears and natural calamity, theft of or damage to baggage and personal effects as our company is not responsible for any of these incidents.</string>
    <string name="back12">Note: The above terms and conditions are applicable when clients book directly from us. For any bookings received from third party, clients shall be liable to their terms and Condition.</string>

 
    <string-array name="roomtype">
        <item>Standard Room(1 to 3 people)</item>
        <item>Family Room(1 to 4 people)</item>
    </string-array>

    <string name="about31">Make your travel easy around different parts of Nepal. Simple to use and navigate.</string>
    <string name="logo">logo</string>
</resources>