<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".termsandservices.front_terms_and_services">

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/terms_services"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="MissingConstraints" />

    <TextView
        android:text="Terms &amp; Conditions"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:text="@string/front1"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="14dp"
        android:text="@string/front2"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/termspage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/front3"
        android:textColor="#0b759e"
        android:textSize="16dp"
        android:textStyle="bold" />

    <CheckBox
        android:text="@string/front4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:text="@string/front5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/backlogin"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="Continue"
        android:textSize="19dp"
        android:backgroundTint="#0b759e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>