<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tanahun"
    tools:context=".termsandservices.back_terms_and_services">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
       android:src="@drawable/splashlogo"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:layout_gravity="center_vertical"
        android:text="Tour Guide Nepal"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:padding="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:text="@string/back1"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/backtips"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/backtotal"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backterms"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_first"
            app:iconGravity="end"
            android:padding="16dp"
            android:text="Read Now"
            android:gravity="left|center_vertical"
            android:backgroundTint="#e36530"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>