<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0b87b0"
    tools:context=".fragments.AboutUsFragment">



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="410dp"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:alpha=".88"
                    android:background="@drawable/swayambhu"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/about1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            android:src="@drawable/splashlogo" />

                        <TextView
                            android:id="@+id/about2"
                            android:layout_marginTop="20dp"
                            android:text="Tour Guide Nepal"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:padding="26dp"
                        android:gravity="left"
                        android:id="@+id/about3"
                        android:text="Travelling, Booking and Camping has become easier."
                        android:textSize="35dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                    <TextView
                        android:padding="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:text="About App"
                        android:fontFamily="cursive"
                        android:textStyle="bold"
                        android:textSize="30dp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:textStyle="italic"
                        android:textColor="@color/white"
                        />

                     <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us1"
                         android:textStyle="italic"
                        android:textColor="@color/white"
                     />


                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="App Features"
                        android:fontFamily="cursive"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/layout_border"
                        android:layout_marginLeft="20dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/maps"/>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Easy Navigation"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/layout_border"
                        android:layout_marginLeft="20dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/hotelicon"/>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hotel Booking"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="6dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/layout_border"
                        android:layout_marginLeft="20dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/busicon"/>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Comfortable ride"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/layout_border"
                        android:layout_marginLeft="20dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/weather"/>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fast weather info"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="Team Encoders"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

               <androidx.viewpager2.widget.ViewPager2
                   android:id="@+id/viewPager_ImageSlider"
                   android:layout_below="@+id/about7"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingStart="70dp"
                   android:paddingEnd="70dp"/>

                <TextView
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="left"
                    android:textColor="@color/white"
                    android:text="@string/aboutend"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>


            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
